feat(MessageService) messageservice implementation is completed. next phase is to merge it in Chat.java and test the behavior.